@@ -21,7 +21,7 @@
 pixmapdir = $(datadir)/pixmaps
 dist_pixmap_DATA = regexxer.png
 
-stockimages = stock_menu_about.png stock_save_all_16.png stock_save_all_24.png
+stockimages = stock_save_all_16.png stock_save_all_24.png
 dist_noinst_DATA = $(stockimages)
 
 BUILT_SOURCES = stockimages.h
