@@ -68,11 +68,6 @@ struct StockItemData
 };
 
 
-const StockIconData stock_icon_about[] =
-{
-  { stock_menu_about, sizeof(stock_menu_about), Gtk::ICON_SIZE_MENU }
-};
-
 const StockIconData stock_icon_save_all[] =
 {
   { stock_save_all_16, sizeof(stock_save_all_16), Gtk::ICON_SIZE_MENU          },
@@ -81,7 +76,6 @@ const StockIconData stock_icon_save_all[] =
 
 const StockItemData regexxer_stock_items[] =
 {
-  { "regexxer-about",    stock_icon_about,    G_N_ELEMENTS(stock_icon_about),    N_("_About")    },
   { "regexxer-save-all", stock_icon_save_all, G_N_ELEMENTS(stock_icon_save_all), N_("Save _all") }
 };
 
